# components/dms2223backend/dms2223backend/openapi/spec.yml
@@ -64,6 +64,136 @@ paths:
  #     security:
  #       - user_token: []
  #         api_key: []
+  # TODO: POST
+
+  /questions/{qid}:
+    get:
+      summary: Gets a single question
+      operationId: dms2223backend.presentation.rest.question.get_question
+      parameters:
+        - $ref: '#/components/parameters/QuestionIdPathParam'
+      responses:
+        '200':
+          description: The full data of a question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/QuestionFullModel'
+              example:
+                qid: 1
+                title: 'Recommended size for the work groups?'
+                body: 'Which is the recommended size for the work groups in your opinion?'
+                owner:
+                  username: 'user1'
+                timestamp: 1665574089.0
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - discussion
+        - questions
+  #    security:
+  #      - user_token: [ ]
+  #        api_key: [ ]
+
+  /questions/{qid}/answers:
+    get:
+      summary: Gets the answers for a question
+      description: |
+        Fetches the full answers for a given question.
+      operationId: dms2223backend.presentation.rest.question.get_answers
+      parameters:
+        - $ref: '#/components/parameters/QuestionIdPathParam'
+      responses:
+        '200':
+          description: The answers for a question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/AnswersListModel'
+              example:
+                - id: 1
+                  qid: 1
+                  timestamp: 1665575089
+                  body: I would suggest four members.
+                  owner:
+                    username: user3
+                  votes: 4
+                  user_votes:
+                    user3: true
+                    user4: true
+                    user5: true
+                    user6: true
+                  comments:
+                    - id: 2
+                      aid: 1
+                      timestamp: 1665575389
+                      body: Evaluation criteria may be relaxed due to the tight number of members
+                      sentiment: POSITIVE
+                      owner:
+                        username: user4
+                      votes: 2
+                      user_votes:
+                        user6: true
+                        user5: true
+                    - id: 1
+                      aid: 1
+                      timestamp: 1665575289
+                      body: Enough to distribute the workload equitatively
+                      sentiment: POSITIVE
+                      owner:
+                        username: user4
+                      votes: 1
+                      user_votes:
+                        user6: true
+                    - id: 3
+                      aid: 1
+                      timestamp: 1665577389
+                      body: The deadline may be too close for the workload and a group this "small"
+                      sentiment: NEGATIVE
+                      owner:
+                        username: user4
+                      votes: 0
+                      user_votes: [ ]
+                - id: 2
+                  qid: 1
+                  timestamp: 1665675089
+                  body: Five members.
+                  owner:
+                    username: user2
+                  votes: 2
+                  user_votes:
+                    user1: true
+                    user2: true
+                  comments:
+                    - id: 4
+                      aid: 2
+                      timestamp: 1665777389
+                      body: The teacher may be stricter if groups are too large
+                      sentiment: NEGATIVE
+                      owner:
+                        username: user4
+                      votes: 0
+                      user_votes: [ ]
+        '404':
+          description: The question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+              example: 'The question with qid 5 does not exist.'
+      tags:
+        - discussion
+        - questions
+        - answers
+  #    security:
+  #      - user_token: [ ]
+  #        api_key: [ ]
+  # TODO: POST
 components:
   schemas:
     QuestionCoreModel:
